--- a/tex/seq64_kudos.tex
+++ b/tex/seq64_kudos.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2016-08-29
-% \update      2016-08-29
+% \update      2017-05-29
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -32,6 +32,10 @@
          ideas for some upcoming improvements based
          on his \textsl{seq32} project.  A lot of ideas.
          And a lot of code!
+      \item \textsl{Animtim}:
+         a number of bug reports and a new logo.
+      \item \textsl{jean-emmanuel}:
+         scrollable main-window support, other features and reports.
    \end{itemize}
 
    Also some bug-reporters and testers:
@@ -47,6 +51,9 @@
          a request for OSC support, a possible future feature.
       \item \textsl{ssj71}:
          a request for an LV2 plugin version, a possible future feature.
+      \item \textsl{georgkrause}:
+         a number of helpful bug reports.
+         
    \end{itemize}
 
    There are a number of authors of \textsl{Seq24}.
