--- a/tex/sequencer64-user-manual.tex
+++ b/tex/sequencer64-user-manual.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-11-01
-% \update      2017-05-07
+% \update      2017-05-29
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -50,7 +50,7 @@
 
 \begin{document}
 
-\title{Sequencer64 User Manual 0.90.6}
+\title{Sequencer64 User Manual 0.91.0}
 \author{Chris Ahlstrom \\
    (\texttt{ahlstromcj@gmail.com})}
 \date{\today}
@@ -79,7 +79,7 @@
 \label{sec:introduction}
 
    This document describes how to use \textsl{Sequencer64}
-   \cite{sequencer64}, through version 0.90.6,
+   \cite{sequencer64}, through version 0.91.0,
    using the latest commit from the \textbf{master} branch.
 %  \textbf{master} or \textbf{fixups} branches.
    If one is impatient to get started mastering \textsl{Sequencer64},
@@ -280,6 +280,8 @@
          whole tone, etc.) have been added.
       \item A pause feature has been added to ALSA-mode playback.
          It also includes a pause keystroke (".") and a pause button.
+      \item A multiple main-window build and run-time option is now available,
+         to show more than one set in the main window.
       \item Internal improvements.
       \begin{itemize}
          \item Provided a new, more MIDI-compliant output format for the MIDI
