--- a/tex/seq64_usr_file.tex
+++ b/tex/seq64_usr_file.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-08-31
-% \update      2017-04-25
+% \update      2017-05-29
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -539,6 +539,37 @@
       # If 0, text is used in some buttons (the main window buttons).
       # Otherwise, icons are used.  One will have to experiment :-).
       0      # use_more_icons (currently affects only main window)
+   \end{verbatim}
+
+   \index{multi-wid}
+   \index{usr!block-rows}
+   \begin{verbatim}
+      # Specifies the number of set window ('wid') rows to show.
+      # The long-standing default is 1, but 2 or 3 may also be set.
+      # Corresponds to 'r' in the '-o wid=rxc,f' option.
+      2      # block_rows (number of rows of set blocks/wids)
+   \end{verbatim}
+
+   \index{usr!block-columns}
+   \begin{verbatim}
+      # Specifies the number of set window ('wid') columns to show.
+      # The long-standing default is 1, but 2 may also be set.
+      # Corresponds to 'c' in the '-o wid=rxc,f' option.
+      2      # block_columns (number of columns of set blocks/wids)
+   \end{verbatim}
+
+   \index{usr!block-independent}
+   \begin{verbatim}
+      # Specifies if the multiple set windows are 'in sync' or can
+      # be set to arbitrary set numbers independently.
+      # The default is false (0), means that there is a single set
+      # spinner, which controls the set number of the upper-left 'wid',
+      # and the rest of the set numbers follow sequentially.  If true
+      # (1), then each 'wid' can be set to any set-number.
+      # Corresponds to the 'f' (true, false, or 'indep') in the
+      # '-o wid=rxc,f' option.  Here, 1 is the same as 'indep' or false,
+      # and 0 is the same as f = true.  Backwards, so be careful.
+      1      # block_independent (separate set spinner for blocks/wids)
    \end{verbatim}
 
    Note that the window-redraw rate option is meant more for experimentation
