--- a/tex/sequencer64-user-manual.tex
+++ b/tex/sequencer64-user-manual.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-11-01
-% \update      2017-06-06
+% \update      2017-07-23
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -457,6 +457,10 @@
 % Tables of keyboard and mouse actions
 
 \input{seq64_kbd_mouse}
+
+% Meta-event support
+
+\input{seq64_meta_events}
 
 % Configuration file
 
